# trading-journal-system

./: .gitignore  Draft 1  Example Reports.md  Optimised workflow draft.txt  pyproject.toml  requirements.txt  streamlit_app.py
.claude/: settings.local.json
.github/workflows/: daily.yml  daily_report.yml  pre_market.yml  weekly.yml  weekly_review.yml
config/: economic_calendar.yaml  settings.yaml
config/prompts/: daily_report.txt  monthly_trajectory.txt  pre_market.txt  weekly_patterns.txt
data/daily_reports/: 2026-07-01.json  2026-07-02.json  2026-07-06.json  2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-21.json  2026-07-22.json
data/pre_market/: 2026-03-17.json  2026-07-02.json  2026-07-03.json  2026-07-07.json  2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json
data/weekly_reviews/: W27.json  W28.json  W29.json
scripts/: run_historical_ingestion.py  update_premarket_with_fmp.py  weekly_synthesis.py
src/cli/: daily_sync.py
src/core/: extractor.py  journalit_trades.py  models.py  parser.py
src/data/fetchers/: economic_earnings.py
